--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "firebase-crud": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "firebase-crud"
+    }
+  },
+  "defaultProject": "firebase-crud",
+  "cli": {
+    "analytics": false
+  }
 }
